--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,7 +20,11 @@
     state: present
     shell: /bin/bash
   loop:
-    - { name: "{{ config_user }}", groups: "admins,docker,sudo", desc: "Configuration System Account" }
+    - {
+        name: "{{ config_user }}",
+        groups: "admins,docker,sudo",
+        desc: "Configuration System Account",
+      }
 
 - name: Add docker registry key
   become: true
@@ -44,3 +48,16 @@
       - docker-ce
       - containerd.io
       - build-essential
+
+- name: Update motd file
+  become: true
+  template:
+    src: motd.j2
+    dest: /etc/motd
+    owner: root
+    mode: 0644
+
+- name: Set Europe/Sofia timezone
+  become: true
+  timezone:
+    name: Europe/Sofia
